--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1,17 +1,17 @@
 {
   "extName": {
-    "message": "Save to Inboard"
+    "message": "Add to Inboard"
   },
   "extDesc": {
-    "message": "Save images or web screenshots to your Inboard library."
+    "message": "Add images or web screenshots to your Inboard library."
   },
   "extTitle": {
-    "message": "Save this page Inboard"
+    "message": "Add this page to Inboard"
   },
   "saveImage": {
-    "message": "Save image to Inboard"
+    "message": "Add image to Inboard"
   },
   "savePage": {
-    "message": "Save page to Inboard"
+    "message": "Add page to Inboard"
   }
 }
